# fleet-music-theorist

./: AGENT.md  ONBOARDING.md  README.md  STUDENT_GUIDE.md  pyproject.toml
examples/: demo-jam-output.mid
lib/: theorist.py
memory/: JOURNAL.md
